# class-widgets-sdk

./: LICENSE  README.md  README_EN.md  example.py  pyproject.toml
.github/workflows/: python-publish.yml
ClassWidgets/SDK/: __init__.py  __init__.pyi  api.pyi  base_model.pyi  config.pyi  notification.pyi  plugin_base.pyi
ClassWidgets/SDK/tools/: __init__.py  help.py  manifest.py  packager.py  publisher.py  scaffold.py
