[project]
name = "class-widgets-sdk"
version = "0.1.0"
description = "Class Widgets 2 Plugin SDK Development tools and type stubs"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Typing :: Stubs Only",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pydantic",
    "click"
]

[project.optional-dependencies]
test = [
    "PySide6",
    "RinUI"
]

[tool.setuptools]
packages = ["classwidgets.sdk"]

[tool.setuptools.package-data]
"ClassWidgets.SDK" = [
    "py.typed",
    "*.pyi",
    "**/*.pyi",
    "assets/*"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
cw-plugin-init = "classwidgets.sdk.tools.scaffold:main"
cw-plugin-pack = "classwidgets.sdk.tools.packager:main"
